--- a/style.css
+++ b/style.css
@@ -21,3 +21,8 @@ header{
     color: var(--cor-texto);
     font-weight: 700;
 }
+nav{
+    display:flex;
+    justify-content:center;
+    font-weight: 400;
+}
