--- a/style.css
+++ b/style.css
@@ -26,3 +26,9 @@ nav{
     justify-content:center;
     font-weight: 400;
 }
+nav a{
+    text-decoration: none;
+    color:var(--cor-texto);
+    margin: 0 2rem 1rem 0;
+    font-size: 1.2rem;
+}
