--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
     --cor-texto: #000000;
     --cor-fundo: #0b081de7;
     --cor-secundaria: #E5D9F2;
-    --cor-clara: #F5EFFF;
+    --cor-clara: #f2ffef;
     --font:"Playfair Display", serif;
 }
 body{
