--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
 :root{
     --cor-texto: #000000;
     --cor-fundo: #0b081de7;
-    --cor-secundaria: #E5D9F2;
+    --cor-secundaria: #f2d9d900;
     --cor-clara: #f2ffef;
     --font:"Playfair Display", serif;
 }
