--- a/style.css
+++ b/style.css
@@ -2,9 +2,9 @@
 
 :root{
     --cor-texto: #000000;
-    --cor-fundo: #0b081de7;
-    --cor-secundaria: #f2d9d900;
-    --cor-clara: #f2ffef;
+    --cor-fundo: #A594F9;
+    --cor-secundaria: #E5D9F2;
+    --cor-clara: #F5EFFF;
     --font:"Playfair Display", serif;
 }
 body{
