--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 
 :root{
     --cor-texto: #000000;
-    --cor-fundo: #A594F9;
+    --cor-fundo: #f2f994;
     --cor-secundaria: #E5D9F2;
     --cor-clara: #F5EFFF;
     --font:"Playfair Display", serif;
