--- a/style.css
+++ b/style.css
@@ -2,8 +2,8 @@
 
 :root{
     --cor-texto: #000000;
-    --cor-fundo: #A594F9;
-    --cor-secundaria: #E5D9F2;
+    --cor-fundo: #a0f994;
+    --cor-secundaria: #d9d9f2;
     --cor-clara: #F5EFFF;
     --font:"Playfair Display", serif;
 }
